objects/sfal__AlertAssignmentRule__mdt.object
<CustomObject>
    <fields>
        <fullName>sfal__AssignSingleUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to assign a User on a success team as an Alert owner, if multiple Users on the success team have the same Eligible Role. If selected, assign ownership to one User by random selection. If not selected, do not make any assignments by role.</description>
        <inlineHelpText>Indicates whether to assign a User on a success team as an Alert owner, if multiple Users on the success team have the same Eligible Role. If selected, assign ownership to one User by random selection. If not selected, do not make any assignments by role.</inlineHelpText>
        <label>Resolve Multiple Users Per Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this assignment rule is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Priority__c</fullName>
        <description>Indicates the priority of the assignment rule relative to other assignment rules that apply to the same Alert record type.</description>
        <inlineHelpText>Indicates the priority of the assignment rule relative to other assignment rules that apply to the same Alert record type.</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__RecordType__c</fullName>
        <description>The API name of the Alert record type that this assignment rule applies to. If blank, it applies to Alerts with no other matching assignment rule for their record type.</description>
        <inlineHelpText>The API name of the Alert record type that this assignment rule applies to. If blank, it applies to Alerts with no other matching assignment rule for their record type.</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Role__c</fullName>
        <description>The type of advising role on a success team that can be assigned an Alert via this assignment rule.</description>
        <inlineHelpText>The type of advising role on a success team that can be assigned an Alert via this assignment rule.</inlineHelpText>
        <label>Eligible Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__UserOrQueueId__c</fullName>
        <description>The Salesforce ID of the User or Queue that can be assigned an Alert via this assignment rule. This condition is evaluated after matching success team roles.</description>
        <inlineHelpText>The Salesforce ID of the User or Queue that can be assigned an Alert via this assignment rule. This condition is evaluated after matching success team roles.</inlineHelpText>
        <label>Eligible User or Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Alert Assignment Rule</label>
    <pluralLabel>Alert Assignment Rules</pluralLabel>
</CustomObject>